--- a/배열.ipynb
+++ b/배열.ipynb
@@ -4,7 +4,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 배열"
+    "# 배열"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 데이터를 나열하고, 각 데이터를 인덱스에 대응하도록 구성한 데이터 구조\n",
+    "- 파이썬에서는 리스트 타입이 배열 기능을 제공하고 있음"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. 배열이 왜 필요할까?\n",
+    "\n",
+    "- 같은 종류의 데이터를 효율적으로 관리하기 위해 사용 (연결된 공간에 순차적으로 저장되어 있어야 효율적임)\n",
+    "- 같은 종류의 데이터를 순차적으로 저장\n",
+    "- 각각의 공간에 인덱스를 통해 직접적으로 접근이 가능\n",
+    "    - 데이터 S T R I N G\n",
+    "    - 인덱스 0 1 2 3 4 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 배열의 장점:\n",
+    "    - 빠른 접근 가능 (인덱스로 직접적 접근이 가능하기 때문)\n",
+    "- 배열의 단점:\n",
+    "    - 데이터를 추가하거나 삭제하기가 쉽지 않음\n",
+    "        - 미리 최대 길이를 지정해야 함 -> 데이터의 추가가 어려움\n",
+    "        - 중간의 데이터를 삭제하면 뒤의 데이터를 옮겨야 할 수 있음"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. 파이썬과 C언어의 배열 예제"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### C언어"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#include <stdio.h>\n",
+    "\n",
+    "int main(int argc, char * argv[])\n",
+    "{\n",
+    "    char country[3] = \"US\";\n",
+    "    printf(\"%c%c\\n\", country[0], country[1]);\n",
+    "    printf(\"%s\\n\", country);\n",
+    "    return 0;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 파이썬"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "US\n",
+      "USA\n"
+     ]
+    }
+   ],
+   "source": [
+    "country = 'US';\n",
+    "print(country);\n",
+    "\n",
+    "country = country + 'A';\n",
+    "print(country);"
    ]
   },
   {
