--- a/배열.ipynb
+++ b/배열.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -93,19 +93,210 @@
     }
    ],
    "source": [
-    "country = 'US';\n",
-    "print(country);\n",
+    "country = 'US'\n",
+    "print(country)\n",
     "\n",
-    "country = country + 'A';\n",
-    "print(country);"
+    "country = country + 'A'\n",
+    "print(country)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. 파이썬과 배열"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 파이썬 리스트 활용"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1차원 배열 : 리스트로 구현시\n",
+    "data = [1, 2, 3, 4, 5]\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 3], [4, 5], [7, 8, 9]]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2차원 배열 : 리스트로 구현시\n",
+    "data = [[1,2,3], [4,5], [7,8,9]]\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2차원 배열에서 인덱스 0은 [1,2,3], 인덱스 1은 [4,5], 인덱스 2는 [7,8,9]\n",
+    "\n",
+    "print(data[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2차원 배열 안의 1차원 배열 안의 값에 접근하는 방법\n",
+    "\n",
+    "print(data[0][0])\n",
+    "print(data[0][1])\n",
+    "print(data[0][2])\n",
+    "print(data[1][0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. 프로그래밍 연습"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 연습 1 : 위의 2차원 배열에서 9, 8, 7 순서로 출력해보기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 8 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data[2][2], data[2][1], data[2][0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 연습 2 : 아래의 dataset 리스트에서 전체 이름 안에 M 은 몇 번 나왔는지 빈도수 출력하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dataset = ['Braund, Mr. Owen Harris',\n",
+    "'Cumings, Mrs. John Bradley (Florence Briggs Thayer)',\n",
+    "'Heikkinen, Miss. Laina',\n",
+    "'Futrelle, Mrs. Jacques Heath (Lily May Peel)',\n",
+    "'Allen, Mr. William Henry',\n",
+    "'Moran, Mr. James',\n",
+    "'McCarthy, Mr. Timothy J',\n",
+    "'Palsson, Master. Gosta Leonard',\n",
+    "'Johnson, Mrs. Oscar W (Elisabeth Vilhelmina Berg)',\n",
+    "'Nasser, Mrs. Nicholas (Adele Achem)',\n",
+    "'Sandstrom, Miss. Marguerite Rut',\n",
+    "'Bonnell, Miss. Elizabeth',\n",
+    "'Saundercock, Mr. William Henry',\n",
+    "'Andersson, Mr. Anders Johan',\n",
+    "'Vestrom, Miss. Hulda Amanda Adolfina',\n",
+    "'Hewlett, Mrs. (Mary D Kingcome) ',\n",
+    "'Rice, Master. Eugene',\n",
+    "'Williams, Mr. Charles Eugene',\n",
+    "'Vander Planke, Mrs. Julius (Emelia Maria Vandemoortele)',\n",
+    "'Masselmani, Mrs. Fatima',\n",
+    "'Fynney, Mr. Joseph J',\n",
+    "'Beesley, Mr. Lawrence',\n",
+    "'McGowan, Miss. Anna \"Annie\"',\n",
+    "'Sloper, Mr. William Thompson',\n",
+    "'Palsson, Miss. Torborg Danira',\n",
+    "'Asplund, Mrs. Carl Oscar (Selma Augusta Emilia Johansson)',\n",
+    "'Emir, Mr. Farred Chehab',\n",
+    "'Fortune, Mr. Charles Alexander',\n",
+    "'Dwyer, Miss. Ellen \"Nellie\"',\n",
+    "'Todoroff, Mr. Lalio']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "38\n"
+     ]
+    }
+   ],
+   "source": [
+    "m_count = 0 #빈도수 변수\n",
+    "for data in dataset:\n",
+    "    for index in range(len(data)):\n",
+    "        if data[index] == 'M':\n",
+    "            m_count += 1\n",
+    "        \n",
+    "print(m_count)"
+   ]
   }
  ],
  "metadata": {
